--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@chainlink/contracts": "^0.8.0",
     "@openzeppelin/contracts": "^4.9.0",
     "@truffle/hdwallet-provider": "^2.1.0",
+    "@ethereum-attestation-service/eas-contracts": "^1.3.0",
+    "@ethereum-attestation-service/eas-sdk": "^2.5.0",
     "dotenv": "^16.0.0"
   },
   "devDependencies": {
